--- a/transakcije.html
+++ b/transakcije.html
@@ -86,6 +86,7 @@
 </div> <!--Super 6-->
 <div class="prikaz"> <!--Tabla-->
     <h1> Transakcije </h1>
+    <i class="fa-regular fa-user user-icon" style="margin-left: 60vw;"></i>
     <hr>
     <section> <!--Početak prve grupe po tri div-a -->
      
