--- a/podesavanja.html
+++ b/podesavanja.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="hr">
 <head>
-    <meta charset="UTF-8">
-    
+    <meta charset="UTF-8">    
         <title> Super6 </title>
+        <link rel="stylesheet" href="style.css">    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <style type="text/css">
             body
             {
                 margin:0;
                 font-family:Arial, Helvetica, sans-serif ;
-                background-color:rgb(26, 26, 211);
+                background-color: #466a87;
               
             }
             .super{
@@ -75,30 +76,26 @@
 </head>
 <body>
 
-<section class="stednja">
-<div class="super"> <!--Super 6-->
-   <ul>
-    <li><a href="kontrolna_tabla.html">Kontrolna tabla</a></li>
-    <li><a href="ciljevi.html">Ciljevi</a></li>
-    <li><a href="transakcije.html">Transakcije</a></li>
-    <li><a href="podesavanja.html">Podešavanja</a></li>
-   </ul>
-</div> <!--Super 6-->
-<div class="prikaz"> <!--Tabla-->
-    <h1> Podešavanja </h1>
-    <hr>
-    <section> <!--Početak prve grupe po tri div-a -->
-Prvi section 
+  <div class="container">
+    <aside class="sidebar">
+            <h2>Super6</h2>
+            <ul>
+                <li><a href="dashboard_drugi.html"><i class="fa-solid fa-house"></i> Kontrolna tabla</a></li>
+                <li><a href="ciljevi.html"><i class="fa-solid fa-bullseye"></i> Ciljevi</a></li>
+                <li class="active"><a href="finansije.html"><i class="fa-solid fa-arrow-right-arrow-left"></i> Finansije</a></li>
+                <li><a href="podesavanja.html"><i class="fa-solid fa-gear"></i> Podešavanja</a></li>
+            </ul>
+    </aside>
 
-    </section> <!--Kraj prve grupe po tri div-a -->
- <br>
-    <section> <!--Početak druge grupe po tri div-a -->
-  Drugi section
-    </section> <!--Kraj druge grupe po tri div-a -->
+    <main class="dashboard_drugi">
+            <header>
+                <h1>Podešavanja</h1>
+                <i class="fa-regular fa-user user-icon" style="margin-left: 60vw;"></i>
+            </header>
+    </main>
 
 
-</div> <!--Tabla-->
-</section> <!--Kraj prvog section-a -->
+  </div>  
 
 
 </body>
