--- a/ciljevi.html
+++ b/ciljevi.html
@@ -7,7 +7,157 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+    <!-- CSS -->
+    <style>
+        body {
+
+    margin: 0;
+
+    background: #f2f2f2;
+
+    font-family: Arial, sans-serif;
+
+}
+
+.container {
+
+    width: 100%;
+grid-template-columns: repeat(2,1fr);
+    margin: 0 auto;
+
+    background: #3d4f6b;
+
+    border-radius: 0;
+
+    padding: 20px 0;
+
+    text-align: center;
+
+    color: white;
+
+}
+
+h2 {
+
+    font-size: 28px;
+
+    margin-bottom: 25px;
+
+}
+
+.grid {
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+    gap: 10px;
+    padding: 0 10px;
+    justify-items: center;    
+
+}
+
+.card {
+
+    max-width: 230px;
+    height: 320px;
+    width: 100%;
+    max-width: 350px;
+    background: #89a7c9;
+    border-radius: 25px;
+    padding: 30px;
+    text-align: center;
+    color: #1e2a38;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+    font-size: 20px;
+
+
+}
+
+.card h3 {
+
+    margin: 10px 0;
+
+    font-weight: bold;
+
+}
+
+.goal-price {
+
+    font-size: 16px;
+    color: #1e2a38;
+
+}
+
+.icon {
+
+    font-size: 70px;
+    margin-bottom: 10px;
+
+
+}
+
+.bar {
+
+    width: 100%;
+
+    height: 10px;
+
+    background: white;
+
+    border-radius: 10px;
+
+    margin: 8px 0;
+
+    overflow: hidden;
+
+}
+
+.fill {
+
+    height: 100%;
+
+    background: #1e2a38;
+
+}
+
+.saved {
+
+    font-size: 16px;
+
+    color: #1e2a38;
+
+}
+
+.add-btn {
+
+    margin-top: 25px;
+
+    background: #bfd3ec;
+
+    border: none;
+
+    padding: 12px 25px;
+
+    font-size: 18px;
+
+    border-radius: 10px;
+
+    cursor: pointer;
+
+}
+
+.add-btn:hover {
+
+    background: #d7e4f5;
+
+}      
+    </style>
 </head>
+
 <body>
     <div class="container">
         <!-- Sidebar identičan Dashboardu -->
@@ -28,6 +178,38 @@
                 <i class="fa-regular fa-user user-icon" style="margin-left: 60vw;"></i>
             </header>
             <hr>
+
+            <div class="grid">
+<!-- Laptop -->
+<div class="card">
+<i class="fa-solid fa-laptop icon"></i>
+<h3>Laptop<br><span class="goal-price">2000 KM</span></h3>
+<div class="bar"><div class="fill" style="width:85%;"></div></div>
+<p class="saved">1700 KM</p>
+</div>
+<!-- Fakultet -->
+<div class="card">
+<i class="fa-solid fa-graduation-cap icon"></i>
+<h3>Fakultet<br><span class="goal-price">1000 KM</span></h3>
+<div class="bar"><div class="fill" style="width:18%;"></div></div>
+<p class="saved">185 KM</p>
+</div>
+<!-- Igrica -->
+<div class="card">
+<i class="fa-brands fa-playstation icon"></i>
+<h3>Igrica<br><span class="goal-price">500 KM</span></h3>
+<div class="bar"><div class="fill" style="width:20%;"></div></div>
+<p class="saved">100 KM</p>
+</div>
+<!-- Selidba -->
+<div class="card">
+<i class="fa-solid fa-house icon"></i>
+<h3>Selidba<br><span class="goal-price">5000 KM</span></h3>
+<div class="bar"><div class="fill" style="width:10%;"></div></div>
+<p class="saved">60 KM</p>
+</div>
+</div>
+<button class="add-btn">+Dodaj novi cilj</button>
  
         </main>
     </div>
